# rwkv-np

./: .gitignore  convert.py  inspect_pth.py  inspect_safe_tensors.py  prompt_math.md  pyproject.toml  readme.md  requirements.txt  rwkv.py  web.py
web/: .env.development  package.json  pnpm-lock.yaml
web/src/: App.svelte
web/src/lib/: api.ts
