[tool.pdm]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "rwkv"
version = "0.dev0"
dependencies = ["scipy", "tokenizers", "tqdm", "numba", "safetensors"]
requires-python = ">=3.10"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
